syntax = "proto3";

package com.Rakumo.object.storage;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.Rakumo.object.storage";
option java_outer_classname = "FileStorageProto";

service FileStorageServiceProto {
  rpc StoreFile (StoreFileRequestMessage) returns (StoreFileResponseMessage);
  rpc RetrieveFileStream (RetrieveFileRequestMessage) returns (stream FileChunkMessage);
  rpc DeleteFile (DeleteFileRequestMessage) returns (DeleteFileResponseMessage);
}

message StoreFileRequestMessage {
  string owner_id = 1;
  string bucket_name = 2;
  string object_key = 3;
  bytes file_data = 4;
  string content_type = 5;
  string expected_checksum = 6;
}

message StoreFileResponseMessage {
  string bucket_name = 1;
  string object_key = 2;
  string version_id = 3;
  string checksum = 4;
  int64 size_bytes = 5;
}

message RetrieveFileRequestMessage {
  string bucket_name = 1;
  string object_key = 2;
  string version_id = 3;
}

message FileChunkMessage {
  bytes data = 1;
  bool is_last_chunk = 2;
}

message DeleteFileRequestMessage {
  string owner_id = 1;
  string bucket_name = 2;
  string object_key = 3;
  string file_id = 4;
}

message DeleteFileResponseMessage {
  bool success = 1;
  string message = 2;
}
